...
      <Icon name="search" size={20} />
      <TextInput
        ref={input}
        autoFocus
        value={query}
        onChangeText={onChangeQuery}
        testID="search-input"
        placeholder={t('searchPlaceholder')}
        placeholderTextColor={colors.textFaint}
        autoCapitalize="none"
        autoCorrect={false}
        returnKeyType="search"
        onSubmitEditing={Keyboard.dismiss}
...
